# AI_test_skill

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  api_test_kit.py  pyproject.toml  requirements.txt  run_demo.sh
.github/workflows/: ci.yml
samples/backend/: api.py  app.py
samples/frontend/: app.js
skills/api-test-kit/: SKILL.md
skills/api-test-kit/agents/: openai.yaml
skills/api-test-kit/scripts/: api_test_kit.py
tests/: test_configured_api.py  test_import.py
tools/: sync_skill_script.py
